Fix Safari's wrong alignment of divs problem

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-/**  **/
-
 body {
     background: rgb(200, 220, 255);
     background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 500, from(rgb(220, 20, 255)), to(rgb(150, 180, 195)));
@@ -9,10 +7,6 @@ body {
     background:         radial-gradient(rgb(200, 220, 255), rgb(150, 180, 195));
 
     -webkit-font-smoothing: antialiased;
-}
-
-.hint {
-    font-size: 1.8em;
 }
 
 #title {
@@ -33,10 +27,70 @@ body {
     font-size: 1.5em;
 }
 
-#mainnav {
-    background: #eee;
-    left: 20%;
-    right: 20%;
+.thumbnail.namecard {
+    display: -webkit-flex; /* Safari */
+    -webkit-flex-direction: column; /* Safari 6.1+ */
+    -webkit-justify-content: space-between; /* Safari 6.1+ */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    
+    text-align: center;
+    width: 900px;
+    height: 514px;
+}
+
+.arrow-wrapper {
+    margin: -5px;
+}
+
+.arrow-text {
+    margin-top: -90px;
+    font-family: "Arimo";
+    font-size: 2em;
+    color: white;
+}
+
+.arrow-down {
+    margin: 0 auto;
+    
+    width: 10px; 
+    height: 10px; 
+    border-left: 95px solid transparent;
+    border-right: 95px solid transparent;
+    
+    border-top: 95px solid #121212;
+}
+
+.contact-box {
+    display: -webkit-flex; /* Safari */
+    display: flex;
+
+    font-family: "Nixie One";
+    font-size: 1.1em;
+    line-height: 1.5em;
+    letter-spacing: 0.3em;
+}
+
+.contact-left {
+    padding: 50px;
+    width: 50%;
+    text-align: left;
+}
+
+.contact-right {
+    padding: 50px;
+    width: 50%;
+    text-align: right;
+}
+
+.hint {
+    font-family: "Josefin Sans";
+    font-size: 1.8em;
+
+    margin: 0 auto;
+    height: 60px;
+    max-width: 1000px;
 }
 
 #about, #backpack, #engineer, #frisbeelover {
@@ -138,61 +192,6 @@ body {
     min-height: 390px;
     height: auto !important;
 }
-
-.thumbnail.namecard {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    text-align: center;
-    
-    width: 900px;
-    height: 514px;
-}
-
-.arrow-wrapper {
-    margin: 0 auto;
-}
-
-.contact-box {
-    display: flex;
-
-    font-family: "Nixie One";
-    font-size: 1.1em;
-    line-height: 1.5em;
-    letter-spacing: 0.3em;
-}
-
-.contact-left {
-    padding: 50px;
-    width: 50%;
-    text-align: left;
-}
-
-.contact-right {
-    padding: 50px;
-    width: 50%;
-    text-align: right;
-}
-
-.arrow-text {
-    margin-top: -85px;
-    font-family: "Arimo";
-    font-size: 1.8em;
-    font-weight: bold;
-    color: white;
-}
-
-.arrow-down {
-    margin-top: -5px;
-    
-    width: 0; 
-    height: 0; 
-    border-left: 95px solid transparent;
-    border-right: 95px solid transparent;
-    
-    border-top: 95px solid #121212;
-}
-
 
 /** Links **/
 
